syntax = "proto3";

package pinnacle.tag.v1;

import "google/protobuf/empty.proto";
import "pinnacle/util/v1/util.proto";

message GetRequest {}
message GetResponse {
    repeated uint32 tag_ids = 1;
}

message AddRequest {
    string output_name = 1;
    repeated string tag_names = 2;
}
message AddResponse {
    repeated uint32 tag_ids = 1;
}

message RemoveRequest {
    repeated uint32 tag_ids = 1;
}

message MoveToOutputRequest {
    string output_name = 1;
    repeated uint32 tag_ids = 2;
}

message MoveToOutputResponse {
    message Error {
        message SameWindowOnTwoOutputs {
            repeated uint32 window_ids = 1;
        }

        oneof kind {
            google.protobuf.Empty output_does_not_exist = 1;
            SameWindowOnTwoOutputs same_window_on_two_outputs = 2;
        }
    }

    optional Error error = 1;
}

// Tag properties

message GetActiveRequest {
    uint32 tag_id = 1;
}
message GetActiveResponse {
    bool active = 1;
}

message GetNameRequest {
    uint32 tag_id = 1;
}
message GetNameResponse {
    string name = 1;
}

message GetOutputNameRequest {
    uint32 tag_id = 1;
}
message GetOutputNameResponse {
    string output_name = 1;
}

//////////////////

message SetActiveRequest {
    uint32 tag_id = 1;
    pinnacle.util.v1.SetOrToggle set_or_toggle = 2;
}

message SwitchToRequest {
    uint32 tag_id = 1;
}

service TagService {
    rpc Get(GetRequest) returns (GetResponse);

    rpc GetActive(GetActiveRequest) returns (GetActiveResponse);
    rpc GetName(GetNameRequest) returns (GetNameResponse);
    rpc GetOutputName(GetOutputNameRequest) returns (GetOutputNameResponse);

    rpc Add(AddRequest) returns (AddResponse);
    rpc Remove(RemoveRequest) returns (google.protobuf.Empty);

    rpc SetActive(SetActiveRequest) returns (google.protobuf.Empty);
    rpc SwitchTo(SwitchToRequest) returns (google.protobuf.Empty);
    rpc MoveToOutput(MoveToOutputRequest) returns (MoveToOutputResponse);
}
